--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
 #quote-box {
   background-color: #f0f0f0;
   color: #232425;
-  padding: 0 1.5rem 1rem 1.5rem;
+  padding: 0 1rem 0.8rem 1rem;
   margin: 4rem 1rem;
-  width: 70%;
+  width: 15rem;
   height: auto;
 }
 
